[package]
name = "renderling-crdt"
version = "0.1.0"
edition = "2024"

[dependencies]
env_logger = "0.11.8"
fastrand = "2.3.0"
lazy_static = "1.5.0"
log = "0.4.27"
renderling = {git = "https://github.com/schell/renderling.git", rev = "e7c95b65cd0941a99d6aff33434eb3c469e225dd"}
wgpu = "26.0.1"
winit = "0.30.12"

anyhow = "1.0.98"
bytes = "1.10.1"
derive_more = { version = "2.0.1", features = ["debug"] }
iroh = "0.91.1"
n0-future = "0.2"
samod = { version = "0.2.1", features = ["tokio"] }
tokio = { version = "1.47.1", features = ["sync", "net"] }
tokio-util = { version = "0.7.15", features = ["codec"] }
tracing = "0.1.41"

# dependencies needed in main.rs
automerge = "0.6.1"
clap = { version = "4.5.41", features = ["derive"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
rand = "0.8.5"
hex = "0.4.3"